# android-vtx

./: .gitmodules  CLAUDE.md  PROGRESS_TRACKER.md  README.md  ROADMAP.md  build_errors.txt  full_build_errors.txt  settings.gradle
app/: build.gradle
app/camera/: build.gradle
app/camera/src/main/cpp/: CMakeLists.txt  CameraStreamerNative.cpp  CameraStreamerNative.h  camera_native_jni.cpp
app/mavlink/src/main/cpp/: CMakeLists.txt  mavlink.cpp  mavlink_router_jni.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio_config.json  camera_config.json  drone.key  gs.key
app/src/main/assets/profiles/: balanced_1080p_30.vtxcam  cinematic_1080p_60.vtxcam  latency_720p_30.vtxcam  latency_720p_60.vtxcam  lowlight_1080p_30.vtxcam  quality_1080p_30.vtxcam  racing_480p_240.vtxcam  racing_720p_120.vtxcam  racing_720p_120_h265.vtxcam  racing_720p_240.vtxcam  racing_720p_240_h265.vtxcam  telephoto_af_1080p.vtxcam  ultrawide_quality_4k.vtxcam
app/src/main/res/layout/: activity_video.xml  dialog_camera_config.xml
app/src/main/res/values/: strings.xml
app/wfbngrtl8812/src/main/cpp/: TxFrame.cpp  TxFrame.h  WfbngLink.cpp  WfbngLink.hpp
camera/: .gitignore  build.gradle
camera/src/main/cpp/: CMakeLists.txt  CameraStreamerNative.h  camera_native_jni.cpp
camera/src/main/cpp/audio/: AudioStreamerNative.cpp  AudioStreamerNative.h
camera/src/main/cpp/jni/: camera_native_jni.cpp
camera/src/main/cpp/video/: CameraStreamerNative.cpp
docs/: architecture_overview.md  camera_config_reference.md  camera_hardware_reference.md  devourer-submodule-migration.md  project_structure.md  wfb-tx-fix.md
gradle/: libs.versions.toml
mavlink/src/main/cpp/: xtermios_stub.cpp
wfbngrtl8812/src/main/cpp/: CMakeLists.txt  TxDispatcher.cpp  TxDispatcher.h  TxFrame.cpp  TxFrame.h  WfbngLink.cpp  WfbngLink.hpp
(+44 files in other folders)
